--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -211,3 +211,30 @@ i.icon{
     display: flex;
     justify-content: space-between;
 }
+
+.not-found__container{
+    display: flex!important;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.not-found__image{
+    width: 300px;
+    height: 300px;
+    margin-bottom: 2rem;
+}
+
+.not-found__title{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.not-found__subtitle{
+    margin-bottom: 0.5rem;
+    font-size: 1.25rem;
+}
+
+.not-found__disclaimer{
+    font-size: 12px
+}
