--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -9,6 +9,20 @@
 body{
     overflow-x: hidden;
     min-width: 320px;
+    background-image: url('../assets/Background.jpg');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: repeat-y;
+}
+main.main{
+    background-color: rgba(255, 255, 255, 0.85);
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    width: 100%;
+    z-index: 10;
 }
 
 /* Semantic */
